--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "5.4.2"
   },
   "dependencies": {
+    "dplayer": "^1.27.0",
     "hexo": "^5.0.0",
     "hexo-asset-img": "^1.0.0",
     "hexo-generator-archive": "^1.0.0",
@@ -22,6 +23,7 @@
     "hexo-renderer-marked": "^4.0.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
+    "hexo-tag-dplayer": "^0.3.3",
     "hexo-theme-landscape": "^0.0.3"
   }
 }
